--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/src/assets/p&hlogo.png">
-    <meta name="viewport" description="Point of Sales for Pom and Honey" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="Pom and Honey Website"
+      content="Pom and Honey's point of sales website offers a seamless ordering experience for delicious Mediterranean cuisine.">
     <title>Pom & Honey</title>
   </head>
   <body>
